--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
     <link href="css/style.min.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <style>
+        @media only screen and (max-width: 480px) {
+            body { font-size: 12px;}
+            header p { padding-left: 4.5em;}
+        }
+    </style>
 
     <link href="css/print.min.css" rel="stylesheet" media="print">
 
