--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body>
 <header>
-    <a href="/"><img src="img/profilepic.jpg"></a>
+    <a href="/"><img src="img/profilepic-minify.jpg"></a>
     <p>Cameron Pittman<br><span>Course Developer</span></p>
 </header>
 
@@ -71,7 +71,7 @@
             </li>
 
             <li>
-                <img style="width: 100px;" src="views/images/pizzeria.jpg">
+                <img style="width: 100px;" src="views/images/pizzeria-minify.jpg">
                 <a href="views/pizza.html">Cam's Pizzeria</a>
                 <p>Who wants a performant pizza?</p>
             </li>
